[package]
name = "hangman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# To handle CLI commands in a neat way.
clap = "3.0.0-beta.4"

rand = "0.8.4"

rpassword = "5.0"

itertools = "0.10.0"

ansi_term = "0.11"

crossterm = "0.21.0"